<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="Start" />
    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#00C2FF"
        android:textSize="10pt" />
    <RadioGroup
        android:id="@+id/positionGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:orientation="vertical" >

     <RadioButton
         android:id="@+id/hand"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:checked="true"
         android:text="hand" />
     <RadioButton
         android:id="@+id/pocket"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:checked="false"
         android:text="pocket" />
<!--      <RadioButton -->
<!--          android:id="@+id/hand_text" -->
<!--          android:layout_width="wrap_content" -->
<!--          android:layout_height="wrap_content" -->
<!--          android:checked="false" -->
<!--          android:text="hand text" /> -->
<!--      <RadioButton -->
<!--          android:id="@+id/pocket_face_up" -->
<!--          android:layout_width="wrap_content" -->
<!--          android:layout_height="wrap_content" -->
<!--          android:checked="false" -->
<!--          android:text=" "/> -->
	</RadioGroup>
	<RadioGroup
        android:id="@+id/statusGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:orientation="horizontal" >

     <RadioButton
         android:id="@+id/Run"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginTop="19dp"
         android:checked="false"
         android:textSize="14pt" 
         android:text="@string/button_run" />
     <RadioButton
         android:id="@+id/Walk"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginTop="19dp"
         android:checked="false"
         android:textSize="14pt" 
         android:text="@string/button_walk" />
     <RadioButton
         android:id="@+id/Still"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginTop="19dp"
         android:checked="true"
         android:textSize="14pt" 
         android:text="@string/button_still"/>
	</RadioGroup>
   
	
    <com.androidplot.xy.XYPlot
	    android:id="@+id/xyz_hist_plot"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:layout_marginTop="10dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
    	title="X/Y/Z accelerations"
    />
</LinearLayout>
